# airworthiness-directives

./: .gitignore  README.md  pyproject.toml  report.md
data/output/: 2025-0254R1.json  2025-23-53.json
docs/: assessment.md  flowchart.md
source/: .env.example  main.py
source/agent/: ads_agent.py
source/ai/: hybrid_parser.py  llm_parser.py  vlm_parser.py
source/config/: settings.py
source/config/prompts/: evaluation_prompt.yaml  extraction_prompt.yaml
source/controller/: evaluation.py  ingestion.py  parsing.py
source/core/: pipeline.py
source/models/: aircraft.py  document.py  rule.py
source/services/: extractor.py  ocr.py
source/utils/: json_serializer.py  logger.py  pdf_detection.py  validators.py
