[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airworthiness-directives-pipeline"
version = "0.1.0"
description = "A pipeline for processing and evaluating aviation Airworthiness Directives (ADs)"
readme = "README.md"
authors = [
    { name = "Developer" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "google-generativeai>=0.4.0",
    "loguru>=0.7.2",
    "typer>=0.12.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
ads-pipeline = "source.main:app"

[tool.setuptools]
packages = ["source"]